# btageffanalyzer

./: .gitignore  CMakeLists.txt  README.md
data/: btageffmap-2016postVFP.json  btageffmap-2017.json  btageffmap-2018.json  btageffmap-DeepCSV-loose-2016postVFP.json  btageffmap-DeepCSV-loose-2017.json  btageffmap-DeepCSV-loose-2018.json  btageffmap-DeepJet-loose-2016postVFP.json  btageffmap-DeepJet-loose-2017.json  btageffmap-DeepJet-loose-2018.json
examples/: main.cc
src/: btageffanalyzer.h
tests/: force.cc  missing.cc  performance.cc
